[package]
name = "vyges-em-ir"
version = "0.1.0"
edition = "2021"
description = "Power-integrity sign-off: PDN IR-drop and electromigration against a budget."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/em-ir"

# No third-party deps (builds/tests offline). Shared readers come from the
# vyges-loom foundation — sibling-checkout path dep in dev; release pins git/version.
[dependencies]
vyges-loom = { git = "https://github.com/vyges-tools/loom", branch = "main" }

[[bin]]
name = "vyges-em-ir"
path = "src/main.rs"

[lib]
name = "vyges_em_ir"
path = "src/lib.rs"
