[package]
name = "vyges-em-ir"
version = "0.1.13"
edition = "2021"
description = "Power-integrity sign-off: PDN IR-drop and electromigration against a budget."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/em-ir"

# Shared readers come from the vyges-loom foundation — sibling-checkout path dep
# in dev; release pins git/version. Structured findings via vyges-events (stderr).
[dependencies]
vyges-loom = { git = "https://github.com/vyges-tools/loom", branch = "main" }
vyges-events = { git = "https://github.com/vyges-tools/events", branch = "main", default-features = false }

[[bin]]
name = "vyges-em-ir"
path = "src/main.rs"

[lib]
name = "vyges_em_ir"
path = "src/lib.rs"
